draft 2 of first two notebooks

--- a/_sources/000_1-sds-3-x/001_whySpark.ipynb
+++ b/_sources/000_1-sds-3-x/001_whySpark.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[ScaDaMaLe, Scalable Data Science and Distributed Machine Learning](https://lamastex.github.io/scalable-data-science/sds/3/x/)\n",
-    "==============================================================================================================================\n",
+    "ScaDaMaLe Course\n",
+    "[site](https://lamastex.github.io/scalable-data-science/sds/3/x/) and\n",
+    "[book](https://lamastex.github.io/ScaDaMaLe/index.html)\n",
     "\n",
     "Why Apache Spark?\n",
     "=================\n",
@@ -24,6 +25,13 @@
     "Right-click the above image-link, open in a new tab and watch the video\n",
     "(4 minutes) or read about it in the Communications of the ACM in the\n",
     "frame below or from the link above.\n",
+    "\n",
+    "**Key Insights from [Apache Spark: A Unified Engine for Big Data\n",
+    "Processing](https://cacm.acm.org/magazines/2016/11/209116-apache-spark/fulltext)\n",
+    "**\n",
+    "\n",
+    "![Key\n",
+    "Insights](https://dl.acm.org/cms/attachment/6f54b222-fe96-497a-8bfc-0e6ea250b05d/ins01.gif)\n",
     "\n",
     "  \n",
     "\n",
