--- a/_sources/000_1-sds-3-x/030_Spark_GDELT_project.ipynb
+++ b/_sources/000_1-sds-3-x/030_Spark_GDELT_project.ipynb
@@ -7,10 +7,12 @@
     "[ScaDaMaLe, Scalable Data Science and Distributed Machine Learning](https://lamastex.github.io/scalable-data-science/sds/3/x/)\n",
     "==============================================================================================================================\n",
     "\n",
-    "Plugging into GDELT Streams\n",
-    "===========================\n",
+    "Johannes Graner, Albert Nilsson and Raazesh Sainudiin\n",
     "\n",
-    "This is just a breif teaser into the world of the GDELT-project: \\*\n",
+    "Plugging into GDELT Streams - TODO - IN PROGRESS\n",
+    "================================================\n",
+    "\n",
+    "This is just a brief teaser into the world of the GDELT-project: \\*\n",
     "<https://www.gdeltproject.org/>\n",
     "\n",
     "This exposition was originally from [Mastering Spark for Data\n",
@@ -19,22 +21,13 @@
     "\n",
     "We will use a spark-gdelt library for Spark 3.0.1:\n",
     "\n",
-    "-   <https://github.com/aamend/spark-gdelt>"
+    "-   <https://github.com/aamend/spark-gdelt>\n",
+    "\n",
+    "SEE:\n",
+    "\n",
+    "-   https://github.com/lamastex/spark-gdelt-examples\n",
+    "-"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import com.aamend.spark.gdelt._\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -77,16 +70,14 @@
    "source": [
     "  \n",
     "\n",
-    ">     total 428\n",
-    ">     drwxr-xr-x 1 root root   4096 May 24 02:32 .\n",
-    ">     drwxr-xr-x 1 root root   4096 May 24 02:32 ..\n",
-    ">     drwxr-xr-x 2 root root   4096 Jan  1  1970 conf\n",
-    ">     -rw-r--r-- 1 root root    731 May 23 23:24 derby.log\n",
-    ">     drwxr-xr-x 3 root root   4096 May 23 23:24 eventlogs\n",
-    ">     drwxr-xr-x 2 root root   4096 May 24 09:45 ganglia\n",
-    ">     drwxr-xr-x 2 root root   4096 May 23 23:24 library-install-logs\n",
-    ">     drwxr-xr-x 2 root root   4096 May 24 09:00 logs\n",
-    ">     -rw-r--r-- 1 root root 402147 Apr  9 19:51 social-media-usage.csv"
+    ">     total 32\n",
+    ">     drwxr-xr-x 1 root root 4096 Dec 18 09:00 .\n",
+    ">     drwxr-xr-x 1 root root 4096 Dec 18 08:54 ..\n",
+    ">     drwxr-xr-x 2 root root 4096 Jan  1  1970 conf\n",
+    ">     -rw-r--r-- 1 root root  733 Dec 18 08:55 derby.log\n",
+    ">     drwxr-xr-x 3 root root 4096 Dec 18 08:55 eventlogs\n",
+    ">     drwxr-xr-x 2 root root 4096 Dec 18 09:30 ganglia\n",
+    ">     drwxr-xr-x 2 root root 4096 Dec 18 09:00 logs"
    ]
   },
   {
@@ -108,7 +99,8 @@
     ">                                      Dload  Upload   Total   Spent    Left  Speed\n",
     ">\n",
     ">       0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-    ">     100 7966k  100 7966k    0     0  12.0M      0 --:--:-- --:--:-- --:--:-- 12.0M"
+    ">       0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+    ">     100 7966k  100 7966k    0     0  10.0M      0 --:--:-- --:--:-- --:--:-- 10.0M"
    ]
   },
   {
@@ -130,8 +122,8 @@
     ">                                      Dload  Upload   Total   Spent    Left  Speed\n",
     ">\n",
     ">       0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-    ">      44 9167k   44 4112k    0     0  5271k      0  0:00:01 --:--:--  0:00:01 5271k\n",
-    ">     100 9167k  100 9167k    0     0  11.2M      0 --:--:-- --:--:-- --:--:-- 11.2M"
+    ">      44 9167k   44 4112k    0     0  8566k      0  0:00:01 --:--:--  0:00:01 8548k\n",
+    ">     100 9167k  100 9167k    0     0  17.1M      0 --:--:-- --:--:-- --:--:-- 17.1M"
    ]
   },
   {
@@ -191,8 +183,10 @@
     ">                                      Dload  Upload   Total   Spent    Left  Speed\n",
     ">\n",
     ">       0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-    ">       0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-    ">     100 10.3M  100 10.3M    0     0  11.4M      0 --:--:-- --:--:-- --:--:-- 11.4M"
+    ">       0 10.3M    0 13493    0     0  37068      0  0:04:52 --:--:--  0:04:52 36967\n",
+    ">      34 10.3M   34 3596k    0     0  2812k      0  0:00:03  0:00:01  0:00:02 2810k\n",
+    ">      71 10.3M   71 7610k    0     0  3339k      0  0:00:03  0:00:02  0:00:01 3337k\n",
+    ">     100 10.3M  100 10.3M    0     0  3502k      0  0:00:03  0:00:03 --:--:-- 3502k"
    ]
   },
   {
@@ -229,15 +223,20 @@
    "source": [
     "  \n",
     "\n",
-    ">     total 56\n",
-    ">     drwxr-xr-x 1 root root  4096 Oct 17 15:15 .\n",
-    ">     drwxr-xr-x 1 root root  4096 Oct 17 14:59 ..\n",
-    ">     drwxr-xr-x 2 root root  4096 Oct 17 14:58 conf\n",
-    ">     -rw-r--r-- 1 root root   726 Oct 17 15:00 derby.log\n",
-    ">     drwxr-xr-x 3 root root  4096 Oct 17 15:00 eventlogs\n",
-    ">     drwxr-xr-x 2 root root  4096 Oct 21 11:30 ganglia\n",
-    ">     drwxr-xr-x 2 root root  4096 Oct 17 15:00 library-install-logs\n",
-    ">     drwxr-xr-x 2 root root 24576 Oct 21 11:34 logs"
+    ">     total 115348\n",
+    ">     drwxr-xr-x 1 root root     4096 Dec 18 09:43 .\n",
+    ">     drwxr-xr-x 1 root root     4096 Dec 18 08:54 ..\n",
+    ">     -rw-r--r-- 1 root root 34277858 Apr 16  2018 20180416121500.gkg.csv\n",
+    ">     -rw-r--r-- 1 root root 10827477 Dec 18 09:43 20180416121500.gkg.csv.zip\n",
+    ">     -rw-r--r-- 1 root root 25728991 May 17  2019 20190517121500.gkg.csv\n",
+    ">     -rw-r--r-- 1 root root  8157895 Dec 18 09:43 20190517121500.gkg.csv.zip\n",
+    ">     -rw-r--r-- 1 root root 29695688 May 23  2019 20190523121500.gkg.csv\n",
+    ">     -rw-r--r-- 1 root root  9387721 Dec 18 09:43 20190523121500.gkg.csv.zip\n",
+    ">     drwxr-xr-x 2 root root     4096 Jan  1  1970 conf\n",
+    ">     -rw-r--r-- 1 root root      733 Dec 18 08:55 derby.log\n",
+    ">     drwxr-xr-x 3 root root     4096 Dec 18 08:55 eventlogs\n",
+    ">     drwxr-xr-x 2 root root     4096 Dec 18 09:30 ganglia\n",
+    ">     drwxr-xr-x 2 root root     4096 Dec 18 09:00 logs"
    ]
   },
   {
@@ -246,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp \"file:///databricks/driver/20180416121500.gkg.csv\" \"dbfs:///datasets/\""
+    "ls /datasets/ScaDaMaLe/"
    ]
   },
   {
@@ -255,7 +254,7 @@
    "source": [
     "  \n",
     "\n",
-    ">     res0: Boolean = true"
+    "[TABLE]"
    ]
   },
   {
@@ -264,25 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp \"file:///databricks/driver/20190523121500.gkg.csv\" \"dbfs:///datasets/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res0: Boolean = true"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cp \"file:///databricks/driver/20190517121500.gkg.csv\" \"dbfs:///datasets/\""
+    "cp \"file:///databricks/driver/20180416121500.gkg.csv\" \"dbfs:///datasets/ScaDaMaLe/GDELT/\""
    ]
   },
   {
@@ -300,7 +281,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls \"dbfs:///datasets/\""
+    "ls /datasets/ScaDaMaLe/GDELT/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  \n",
+    "\n",
+    "[TABLE]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cp \"file:///databricks/driver/20190523121500.gkg.csv\" \"dbfs:///datasets/ScaDaMaLe/GDELT/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  \n",
+    "\n",
+    ">     res7: Boolean = true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cp \"file:///databricks/driver/20190517121500.gkg.csv\" \"dbfs:///datasets/ScaDaMaLe/GDELT/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  \n",
+    "\n",
+    ">     res8: Boolean = true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls \"dbfs:///datasets/ScaDaMaLe/GDELT/\""
    ]
   },
   {
@@ -323,7 +358,8 @@
     "import spark.implicits._\n",
     "import org.apache.spark.sql.Dataset\n",
     "//val gdeltEventDS: Dataset[Event] = spark.read.gdeltEvent(\"/path/to/event.csv\")\n",
-    "val gdeltGkgDS: Dataset[GKGEvent] = spark.read.gdeltGkg(\"dbfs:/datasets/20190523121500.gkg.csv\")\n",
+    "//val gdeltGkgDS: Dataset[GKGEventV1] = spark.read.gdeltGkg(\"dbfs:/datasets/20190523121500.gkg.csv\")\n",
+    "val gdeltGkgDS = spark.read.format(\"text\").load(\"dbfs:/datasets/ScaDaMaLe/GDELT/20190523121500.gkg.csv\")//.as[GKGEventV1]\n",
     "//val gdeltMention: Dataset[Mention] = spark.read.gdeltMention(\"/path/to/mention.csv\")"
    ]
   },
@@ -336,7 +372,7 @@
     ">     import com.aamend.spark.gdelt._\n",
     ">     import spark.implicits._\n",
     ">     import org.apache.spark.sql.Dataset\n",
-    ">     gdeltGkgDS: org.apache.spark.sql.Dataset[com.aamend.spark.gdelt.GKGEvent] = [gkgRecordId: struct<publishDate: timestamp, translingual: boolean ... 1 more field>, publishDate: timestamp ... 25 more fields]"
+    ">     gdeltGkgDS: org.apache.spark.sql.DataFrame = [value: string]"
    ]
   },
   {
@@ -355,133 +391,7 @@
     "  \n",
     "\n",
     ">     root\n",
-    ">      |-- gkgRecordId: struct (nullable = true)\n",
-    ">      |    |-- publishDate: timestamp (nullable = true)\n",
-    ">      |    |-- translingual: boolean (nullable = false)\n",
-    ">      |    |-- numberInBatch: integer (nullable = false)\n",
-    ">      |-- publishDate: timestamp (nullable = true)\n",
-    ">      |-- sourceCollectionIdentifier: string (nullable = true)\n",
-    ">      |-- sourceCommonName: string (nullable = true)\n",
-    ">      |-- documentIdentifier: string (nullable = true)\n",
-    ">      |-- counts: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- countType: string (nullable = true)\n",
-    ">      |    |    |-- count: long (nullable = false)\n",
-    ">      |    |    |-- objectType: string (nullable = true)\n",
-    ">      |    |    |-- location: struct (nullable = true)\n",
-    ">      |    |    |    |-- geoType: string (nullable = true)\n",
-    ">      |    |    |    |-- geoName: string (nullable = true)\n",
-    ">      |    |    |    |-- countryCode: string (nullable = true)\n",
-    ">      |    |    |    |-- adm1Code: string (nullable = true)\n",
-    ">      |    |    |    |-- adm2Code: string (nullable = true)\n",
-    ">      |    |    |    |-- geoPoint: struct (nullable = true)\n",
-    ">      |    |    |    |    |-- latitude: float (nullable = false)\n",
-    ">      |    |    |    |    |-- longitude: float (nullable = false)\n",
-    ">      |    |    |    |-- featureId: string (nullable = true)\n",
-    ">      |-- enhancedCounts: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- count: struct (nullable = true)\n",
-    ">      |    |    |    |-- countType: string (nullable = true)\n",
-    ">      |    |    |    |-- count: long (nullable = false)\n",
-    ">      |    |    |    |-- objectType: string (nullable = true)\n",
-    ">      |    |    |    |-- location: struct (nullable = true)\n",
-    ">      |    |    |    |    |-- geoType: string (nullable = true)\n",
-    ">      |    |    |    |    |-- geoName: string (nullable = true)\n",
-    ">      |    |    |    |    |-- countryCode: string (nullable = true)\n",
-    ">      |    |    |    |    |-- adm1Code: string (nullable = true)\n",
-    ">      |    |    |    |    |-- adm2Code: string (nullable = true)\n",
-    ">      |    |    |    |    |-- geoPoint: struct (nullable = true)\n",
-    ">      |    |    |    |    |    |-- latitude: float (nullable = false)\n",
-    ">      |    |    |    |    |    |-- longitude: float (nullable = false)\n",
-    ">      |    |    |    |    |-- featureId: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- themes: array (nullable = true)\n",
-    ">      |    |-- element: string (containsNull = true)\n",
-    ">      |-- enhancedThemes: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- theme: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- locations: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- geoType: string (nullable = true)\n",
-    ">      |    |    |-- geoName: string (nullable = true)\n",
-    ">      |    |    |-- countryCode: string (nullable = true)\n",
-    ">      |    |    |-- adm1Code: string (nullable = true)\n",
-    ">      |    |    |-- adm2Code: string (nullable = true)\n",
-    ">      |    |    |-- geoPoint: struct (nullable = true)\n",
-    ">      |    |    |    |-- latitude: float (nullable = false)\n",
-    ">      |    |    |    |-- longitude: float (nullable = false)\n",
-    ">      |    |    |-- featureId: string (nullable = true)\n",
-    ">      |-- enhancedLocations: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- location: struct (nullable = true)\n",
-    ">      |    |    |    |-- geoType: string (nullable = true)\n",
-    ">      |    |    |    |-- geoName: string (nullable = true)\n",
-    ">      |    |    |    |-- countryCode: string (nullable = true)\n",
-    ">      |    |    |    |-- adm1Code: string (nullable = true)\n",
-    ">      |    |    |    |-- adm2Code: string (nullable = true)\n",
-    ">      |    |    |    |-- geoPoint: struct (nullable = true)\n",
-    ">      |    |    |    |    |-- latitude: float (nullable = false)\n",
-    ">      |    |    |    |    |-- longitude: float (nullable = false)\n",
-    ">      |    |    |    |-- featureId: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- persons: array (nullable = true)\n",
-    ">      |    |-- element: string (containsNull = true)\n",
-    ">      |-- enhancedPersons: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- person: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- organisations: array (nullable = true)\n",
-    ">      |    |-- element: string (containsNull = true)\n",
-    ">      |-- enhancedOrganisations: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- organisation: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- tone: struct (nullable = true)\n",
-    ">      |    |-- tone: float (nullable = false)\n",
-    ">      |    |-- positiveScore: float (nullable = false)\n",
-    ">      |    |-- negativeScore: float (nullable = false)\n",
-    ">      |    |-- polarity: float (nullable = false)\n",
-    ">      |    |-- activityReferenceDensity: float (nullable = false)\n",
-    ">      |    |-- selfGroupReferenceDensity: float (nullable = false)\n",
-    ">      |    |-- wordCount: integer (nullable = false)\n",
-    ">      |-- enhancedDates: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- dateResolution: integer (nullable = false)\n",
-    ">      |    |    |-- month: integer (nullable = false)\n",
-    ">      |    |    |-- day: integer (nullable = false)\n",
-    ">      |    |    |-- year: integer (nullable = false)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- gcams: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- gcamCode: string (nullable = true)\n",
-    ">      |    |    |-- gcamValue: double (nullable = false)\n",
-    ">      |-- sharingImage: string (nullable = true)\n",
-    ">      |-- relatedImages: array (nullable = true)\n",
-    ">      |    |-- element: string (containsNull = true)\n",
-    ">      |-- socialImageEmbeds: array (nullable = true)\n",
-    ">      |    |-- element: string (containsNull = true)\n",
-    ">      |-- socialVideoEmbeds: array (nullable = true)\n",
-    ">      |    |-- element: string (containsNull = true)\n",
-    ">      |-- quotations: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- charLength: integer (nullable = false)\n",
-    ">      |    |    |-- verb: string (nullable = true)\n",
-    ">      |    |    |-- quote: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- allNames: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- name: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- amounts: array (nullable = true)\n",
-    ">      |    |-- element: struct (containsNull = true)\n",
-    ">      |    |    |-- amount: double (nullable = false)\n",
-    ">      |    |    |-- amountType: string (nullable = true)\n",
-    ">      |    |    |-- charOffset: integer (nullable = false)\n",
-    ">      |-- translationInfo: struct (nullable = true)\n",
-    ">      |    |-- SRCLC: string (nullable = true)\n",
-    ">      |    |-- ENG: string (nullable = true)\n",
-    ">      |-- extrasXML: string (nullable = true)"
+    ">      |-- value: string (nullable = true)"
    ]
   },
   {
@@ -496,7 +406,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "  \n",
+    "\n",
+    "[TABLE]\n",
+    "\n",
+    "Truncated to 30 rows"
+   ]
   },
   {
    "cell_type": "code",
@@ -510,11 +426,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "  \n",
-    "\n",
-    ">     res50: Long = 2543\n",
-    "\n",
+    "val gdeltGkgDS = spark.read.format(\"text\").load(\"dbfs:/datasets/ScaDaMaLe/GDELT/20190523121500.gkg.csv\").as[GKGEventV2]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "Let's look a the locations field.\n",
