book draft in progress

--- a/_sources/000_1-sds-3-x/000_ScaDaMaLe.ipynb
+++ b/_sources/000_1-sds-3-x/000_ScaDaMaLe.ipynb
@@ -160,8 +160,10 @@
     "We will see an industrial case-study that will illustrate a concrete\n",
     "**data science process** in action in the sequel.\n",
     "\n",
-    "What is the [Data Science Process](https://en.wikipedia.org/wiki/Data_science) in one picture?\n",
-    "==============================================================================================\n",
+    "What is the [Data Science Process](https://en.wikipedia.org/wiki/Data_science)\n",
+    "==============================================================================\n",
+    "\n",
+    "**The Data Science Process in one picture**\n",
     "\n",
     "![what is\n",
     "sds?](https://github.com/lamastex/scalable-data-science/raw/master/assets/images/sds.png \"sds\")\n",
@@ -181,8 +183,30 @@
     "*Distributed Machine Learning* allows the models in the data science\n",
     "process to be scalably trained and extract value from big data.\n",
     "\n",
-    "Let's look at two industrially-informed academic papers about what\n",
-    "constitutes the contents of this course.\n",
+    "What is Data Science?\n",
+    "---------------------\n",
+    "\n",
+    "It is increasingly accepted that [Data\n",
+    "Science](https://en.wikipedia.org/wiki/Data_science)\n",
+    "\n",
+    "> is an inter-disciplinary field that uses scientific methods,\n",
+    "> processes, algorithms and systems to extract knowledge and insights\n",
+    "> from many structural and unstructured data. Data science is related to\n",
+    "> data mining, machine learning and big data.\n",
+    "\n",
+    "> Data science is a \"concept to unify statistics, data analysis and\n",
+    "> their related methods\" in order to \"understand and analyze actual\n",
+    "> phenomena\" with data. It uses techniques and theories drawn from many\n",
+    "> fields within the context of mathematics, statistics, computer\n",
+    "> science, domain knowledge and information science. Turing award winner\n",
+    "> Jim Gray imagined data science as a \"fourth paradigm\" of science\n",
+    "> (empirical, theoretical, computational and now data-driven) and\n",
+    "> asserted that \"everything about science is changing because of the\n",
+    "> impact of information technology\" and the data deluge.\n",
+    "\n",
+    "Now, let us look at two industrially-informed academic papers that\n",
+    "influence the above quote on what is Data Science, but with a view\n",
+    "towards the contents and syllabus of this course.\n",
     "\n",
     "Source: [Vasant Dhar, Data Science and Prediction, Communications of the\n",
     "ACM, Vol. 56 (1). p. 64,\n",
@@ -232,31 +256,10 @@
     "    -   policing\n",
     "    -   marketing\n",
     "\n",
-    "Data Science\n",
-    "============\n",
-    "\n",
-    "It is [increasingly\n",
-    "accepted](https://en.wikipedia.org/wiki/Data_science) that:\n",
-    "\n",
-    "> Data science is an inter-disciplinary field that uses scientific\n",
-    "> methods, processes, algorithms and systems to extract knowledge and\n",
-    "> insights from many structural and unstructured data. Data science is\n",
-    "> related to data mining, machine learning and big data.\n",
-    "\n",
-    "> Data science is a \"concept to unify statistics, data analysis and\n",
-    "> their related methods\" in order to \"understand and analyze actual\n",
-    "> phenomena\" with data. It uses techniques and theories drawn from many\n",
-    "> fields within the context of mathematics, statistics, computer\n",
-    "> science, domain knowledge and information science. Turing award winner\n",
-    "> Jim Gray imagined data science as a \"fourth paradigm\" of science\n",
-    "> (empirical, theoretical, computational and now data-driven) and\n",
-    "> asserted that \"everything about science is changing because of the\n",
-    "> impact of information technology\" and the data deluge.\n",
+    "  \n",
     "\n",
     "But what is Data Engineering (including Machine Learning Engineering and\n",
     "Operations) and how does it relate to Data Science?\n",
-    "\n",
-    "  \n",
     "\n",
     "Data Engineering\n",
     "================\n",
@@ -313,7 +316,7 @@
     "  \n",
     "\n",
     "The Data Engineering Scientist as \"The Middle Way\"\n",
-    "==================================================\n",
+    "--------------------------------------------------\n",
     "\n",
     "Here are some basic axioms that should be self-evident.\n",
     "\n",
@@ -321,26 +324,27 @@
     "    -   some humans will be better and have inclinations for engineering\n",
     "        and others for pure mathematics by nature and nurture\n",
     "    -   one human cannot easily be a master of everything needed for\n",
-    "        innovating a new data-based product or service (very very\n",
-    "        rarely)\n",
+    "        innovating a new data-based product or service (very very rarely\n",
+    "        though this happens)\n",
     "-   Skills can be gained by any human who wants to learn to the extent\n",
     "    s/he is able to expend time, energy, etc.\n",
     "\n",
     "For the **Scalable Data Engineering Science Process:** *towards\n",
-    "Production-Ready and Productisable Prototyping for the Data Factory* we\n",
-    "need to allow each data engineer to be more of a data scientist and each\n",
-    "data scientist to be more of a data engineer, up to each individual's\n",
-    "*comfort zones* in technical and mathematical/conceptual and\n",
-    "time-availability planes, but with some **minimal expectations** of\n",
-    "mutual appreciation.\n",
+    "Production-Ready and Productisable Prototyping for the Data-based\n",
+    "Factory* we need to allow each data engineer to be more of a data\n",
+    "scientist and each data scientist to be more of a data engineer, up to\n",
+    "each individual's *comfort zones* in technical and\n",
+    "mathematical/conceptual and time-availability planes, but with some\n",
+    "**minimal expectations** of mutual appreciation.\n",
     "\n",
     "This course is designed to help you take the first minimal steps towards\n",
-    "**data engineering science**.\n",
+    "such a **data engineering science**.\n",
     "\n",
     "In the sequel it will become apparent **why a team of data engineering\n",
-    "scientists** with skills across the conventional (2019) spectrum of data\n",
+    "scientists** with skills across the conventional (2021) spectrum of data\n",
     "engineer versus data scientist **is crucial** for **Production-Ready and\n",
-    "Productisable Prototyping for the Data Factory**.\n",
+    "Productisable Prototyping for the Data-based Factory**, whose outputs\n",
+    "include standard AI products today.\n",
     "\n",
     "Standing on shoulders of giants!\n",
     "--------------------------------\n",
@@ -368,10 +372,14 @@
     "\n",
     "Note the **Expected Reference Readings** above for this course.\n",
     "\n",
-    "A Brief History of Data Analysis and Where Does \"Big Data\" Come From?\n",
-    "---------------------------------------------------------------------\n",
+    "A Brief Tour of Data Science\n",
+    "============================\n",
     "\n",
-    "#### by Anthony Joseph in BerkeleyX/CS100.1x\n",
+    "History of Data Analysis and Where Does \"Big Data\" Come From?\n",
+    "-------------------------------------------------------------\n",
+    "\n",
+    "The following content was created by Anthony Joseph and used in\n",
+    "BerkeleyX/CS100.1x from 2015.\n",
     "\n",
     "-   **(watch now 1:53):** A Brief History of Data Analysis\n",
     "    -   [![A Brief History of Data Analysis by Anthony Joseph in\n",
@@ -423,7 +431,8 @@
     "Data Science Defined, Cloud Computing and What's Hard About Data Science?\n",
     "-------------------------------------------------------------------------\n",
     "\n",
-    "#### by Anthony Joseph in BerkeleyX/CS100.1x\n",
+    "The following content was created by Anthony Joseph and used in\n",
+    "BerkeleyX/CS100.1x from 2015.\n",
     "\n",
     "-   **(watch now 2:03)**: Data Science Defined\n",
     "    -   [![Data Science Defined by Anthony Joseph in\n",
@@ -440,48 +449,9 @@
     "    -   [![What's hard about data science by Anthony Joseph in\n",
     "        BerkeleyX/CS100.1x](http://img.youtube.com/vi/MIqbwJ6AbIY/0.jpg)](https://www.youtube.com/watch?v=MIqbwJ6AbIY?rel=0&modestbranding=1)\n",
     "\n",
-    "**(Watch later 0:52)**: What is Data Science? According to a Udacity\n",
-    "Course.\n",
-    "\n",
-    "[![What is Data Science? Udacity\n",
-    "Course](https://img.youtube.com/vi/9PIqjaXJo7M/0.jpg)](https://www.youtube.com/watch?v=9PIqjaXJo7M)\n",
-    "\n",
-    "What should *you* be able to do at the end of this course?\n",
-    "==========================================================\n",
-    "\n",
-    "By following these online interactions in the form of lab/lectures,\n",
-    "asking questions, engaging in discussions, doing HOMEWORK assignments\n",
-    "and completing the group project, you should be able to:\n",
-    "\n",
-    "-   Understand the principles of fault-tolerant scalable computing in\n",
-    "    Spark\n",
-    "    -   in-memory and generic DAG extensions of Map-reduce\n",
-    "    -   resilient distributed datasets for fault-tolerance\n",
-    "    -   skills to process today's big data using state-of-the art\n",
-    "        techniques in Apache Spark 3.0, in terms of:\n",
-    "        -   hands-on coding with realistic datasets\n",
-    "        -   an intuitive understanding of the ideas behind the\n",
-    "            technology and methods\n",
-    "        -   pointers to academic papers in the literature, technical\n",
-    "            blogs and video streams for *you to futher your theoretical\n",
-    "            understanding*.\n",
-    "-   More concretely, you will be able to:\n",
-    "    -   Extract, Transform, Load, Interact, Explore and Analyze Data\n",
-    "    -   Build Scalable Machine Learning Pipelines (or help build them)\n",
-    "        using Distributed Algorithms and Optimization\n",
-    "-   How to keep up?\n",
-    "    -   This is a fast-changing world.\n",
-    "    -   Recent videos around Apache Spark are archived here (these\n",
-    "        videos are a great way to learn the latest happenings in\n",
-    "        industrial R&D today!):\n",
-    "        -   https://databricks.com/sparkaisummit/north-america/sessions\n",
-    "-   What is mathematically stable in the world of 'big data'?\n",
-    "    -   There is a growing body of work on the analysis of parallel and\n",
-    "        distributed algorithms, the work-horse of big data and AI.\n",
-    "    -   We will see some of this in a theoretical module later, but the\n",
-    "        focus here is on how to write programs and analyze data.\n",
-    "-   Recommended Light reading (18 minutes)\n",
-    "    -   <https://towardsdatascience.com/what-is-big-data-understanding-the-history-32078f3b53ce>\n",
+    "Here is a recommended light reading on **What is \"Big Data\" --\n",
+    "Understanding th History** (18 minutes): -\n",
+    "<https://towardsdatascience.com/what-is-big-data-understanding-the-history-32078f3b53ce>\n",
     "\n",
     "  \n",
     "\n",
@@ -492,8 +462,8 @@
     "Background Materials on Data Science\n",
     "------------------------------------\n",
     "\n",
-    "Here are some extra materials on Data Science by Anthony Joseph in\n",
-    "BerkeleyX/CS100.1x\n",
+    "The following content was created by Anthony Joseph and used in\n",
+    "BerkeleyX/CS100.1x from 2015.\n",
     "\n",
     "-   **(watch later 2:31)**: Why all the excitement about *Big Data\n",
     "    Analytics*? (using google search to now-cast google flu-trends)\n",
@@ -556,7 +526,42 @@
     "        -   business intelligence and analytics tools\n",
     "    -   Most Maths/Stats/Computing programs cater to the *programmer*\n",
     "        role\n",
-    "        -   Numpy and Matplotlib, R, Matlab, and Octave."
+    "        -   Numpy and Matplotlib, R, Matlab, and Octave.\n",
+    "\n",
+    "What should *you* be able to do at the end of this course?\n",
+    "==========================================================\n",
+    "\n",
+    "By following these online interactions in the form of lab/lectures,\n",
+    "asking questions, engaging in discussions, doing HOMEWORK assignments\n",
+    "and completing the group project, you should be able to:\n",
+    "\n",
+    "-   Understand the principles of fault-tolerant scalable computing in\n",
+    "    Spark\n",
+    "    -   in-memory and generic DAG extensions of Map-reduce\n",
+    "    -   resilient distributed datasets for fault-tolerance\n",
+    "    -   skills to process today's big data using state-of-the art\n",
+    "        techniques in Apache Spark 3.0, in terms of:\n",
+    "        -   hands-on coding with realistic datasets\n",
+    "        -   an intuitive understanding of the ideas behind the\n",
+    "            technology and methods\n",
+    "        -   pointers to academic papers in the literature, technical\n",
+    "            blogs and video streams for *you to futher your theoretical\n",
+    "            understanding*.\n",
+    "-   More concretely, you will be able to:\n",
+    "    -   Extract, Transform, Load, Interact, Explore and Analyze Data\n",
+    "    -   Build Scalable Machine Learning Pipelines (or help build them)\n",
+    "        using Distributed Algorithms and Optimization\n",
+    "-   How to keep up?\n",
+    "    -   This is a fast-changing world.\n",
+    "    -   Recent videos around Apache Spark are archived here (these\n",
+    "        videos are a great way to learn the latest happenings in\n",
+    "        industrial R&D today!):\n",
+    "        -   https://databricks.com/sparkaisummit/north-america/sessions\n",
+    "-   What is mathematically stable in the world of 'big data'?\n",
+    "    -   There is a growing body of work on the analysis of parallel and\n",
+    "        distributed algorithms, the work-horse of big data and AI.\n",
+    "    -   We will see some of this in a theoretical module later, but the\n",
+    "        focus here is on how to write programs and analyze data."
    ]
   }
  ],
