book draft in progress

--- a/_sources/000_1-sds-3-x/001_whySpark.ipynb
+++ b/_sources/000_1-sds-3-x/001_whySpark.ipynb
@@ -30,14 +30,6 @@
     "Processing](https://cacm.acm.org/magazines/2016/11/209116-apache-spark/fulltext)\n",
     "**\n",
     "\n",
-    "-   A simple programming model can capture streaming, batch, and\n",
-    "    interactive workloads and enable new applications that combine them.\n",
-    "-   Apache Spark applications range from finance to scientific data\n",
-    "    processing and combine libraries for SQL, machine learning, and\n",
-    "    graphs.\n",
-    "-   In six years, Apache Spark has grown to 1,000 contributors and\n",
-    "    thousands of deployments.\n",
-    "\n",
     "![Key\n",
     "Insights](https://dl.acm.org/cms/attachment/6f54b222-fe96-497a-8bfc-0e6ea250b05d/ins01.gif)\n",
     "\n",
@@ -51,13 +43,9 @@
     "![Spark in\n",
     "context](https://miro.medium.com/max/1200/1*0bWwqlOfjRqoUDqrH62GbQ.png)\n",
     "\n",
-    "The big data problem\n",
-    "--------------------\n",
+    "### The big data problem, Hardware, distributing work, handling failed and slow machines\n",
     "\n",
-    "**Hardware, distributing work, handling failed and slow machines**\n",
-    "\n",
-    "The following content was created by Anthony Joseph and used in\n",
-    "BerkeleyX/CS100.1x from 2015.\n",
+    "#### by Anthony Joseph in BerkeleyX/CS100.1x\n",
     "\n",
     "-   **(watch now 1:48)**: The Big Data Problem\n",
     "    -   [![The Big Data Problem by Anthony Joseph in\n",
@@ -78,8 +66,7 @@
     "MapReduce and Apache Spark.\n",
     "---------------------------\n",
     "\n",
-    "The following content was created by Anthony Joseph and used in\n",
-    "BerkeleyX/CS100.1x from 2015.\n",
+    "#### by Anthony Joseph in BerkeleyX/CS100.1x\n",
     "\n",
     "-   **(watch now 1:48)**: Map Reduce (is bounded by Disk I/O)\n",
     "    -   [![The Big Data Problem by Anthony Joseph in\n",
@@ -166,12 +153,14 @@
     "\n",
     "------------------------------------------------------------------------\n",
     "\n",
-    "**Next let us get everyone to login to databricks** (or another Spark\n",
-    "platform) to get our hands dirty with some Spark code!\n",
+    "some time...\n",
     "\n",
-    "------------------------------------------------------------------------\n",
+    "We have come to the end of this section.\n",
     "\n",
-    "------------------------------------------------------------------------"
+    "**Next let us get everyone to login to databricks** to get our hands\n",
+    "dirty with some Spark code!\n",
+    "\n",
+    "10-15 minutes. Then break for 5. *** ***"
    ]
   }
  ],
